--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -1,7 +1,8 @@
 @import bourbon
 
-+font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
-+font-face("RobotoMedium", "../fonts/RobotoMedium/RobotoMedium", $file-formats: eot ttf)
-+font-face("RobotoLight", "../fonts/RobotoLight/RobotoLight", $file-formats: eot woff ttf)
-+font-face("RobotoLight", "../fonts/RobotoCondensed/RobotoCondensed", $file-formats: eot woff ttf)
-+font-face("icon", "../fonts/icon/font/icon", $file-formats: eot woff woff2 ttf svg)
++font-face("RobotoRegular", "../../../wp-content/themes/thepeterbok/fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
++font-face("RobotoMedium", "../../../wp-content/themes/thepeterbok/fonts/RobotoMedium/RobotoMedium", $file-formats: eot ttf)
++font-face("RobotoLight", "../../../wp-content/themes/thepeterbok/fonts/RobotoLight/RobotoLight", $file-formats: eot woff ttf)
++font-face("RobotoCondensed", "../../../wp-content/themes/thepeterbok/fonts/RobotoCondensed/RobotoCondensed", $file-formats: eot woff ttf)
++font-face("RobotoBold", "../../../wp-content/themes/thepeterbok/fonts/RobotoBold/RobotoBold", $file-formats: eot woff ttf)
++font-face("icon", "../../../wp-content/themes/thepeterbok/fonts/icon/font/icon", $file-formats: eot woff woff2 ttf svg)
