--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -2,28 +2,34 @@
   font-family: "RobotoRegular";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"); }
+  src: url("../../../wp-content/themes/thepeterbok/fonts/RobotoRegular/RobotoRegular.eot?#iefix") format("embedded-opentype"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"); }
 
 @font-face {
   font-family: "RobotoMedium";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/RobotoMedium/RobotoMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoMedium/RobotoMedium.ttf") format("truetype"); }
+  src: url("../../../wp-content/themes/thepeterbok/fonts/RobotoMedium/RobotoMedium.eot?#iefix") format("embedded-opentype"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoMedium/RobotoMedium.ttf") format("truetype"); }
 
 @font-face {
   font-family: "RobotoLight";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/RobotoLight/RobotoLight.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"); }
+  src: url("../../../wp-content/themes/thepeterbok/fonts/RobotoLight/RobotoLight.eot?#iefix") format("embedded-opentype"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoLight/RobotoLight.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "RobotoLight";
+  font-family: "RobotoCondensed";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/RobotoCondensed/RobotoCondensed.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoCondensed/RobotoCondensed.woff") format("woff"), url("../fonts/RobotoCondensed/RobotoCondensed.ttf") format("truetype"); }
+  src: url("../../../wp-content/themes/thepeterbok/fonts/RobotoCondensed/RobotoCondensed.eot?#iefix") format("embedded-opentype"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoCondensed/RobotoCondensed.woff") format("woff"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoCondensed/RobotoCondensed.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "RobotoBold";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../../wp-content/themes/thepeterbok/fonts/RobotoBold/RobotoBold.eot?#iefix") format("embedded-opentype"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../../../wp-content/themes/thepeterbok/fonts/RobotoBold/RobotoBold.ttf") format("truetype"); }
 
 @font-face {
   font-family: "icon";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/icon/font/icon.eot?#iefix") format("embedded-opentype"), url("../fonts/icon/font/icon.woff2") format("woff2"), url("../fonts/icon/font/icon.woff") format("woff"), url("../fonts/icon/font/icon.ttf") format("truetype"), url("../fonts/icon/font/icon.svg#icon") format("svg"); }
+  src: url("../../../wp-content/themes/thepeterbok/fonts/icon/font/icon.eot?#iefix") format("embedded-opentype"), url("../../../wp-content/themes/thepeterbok/fonts/icon/font/icon.woff2") format("woff2"), url("../../../wp-content/themes/thepeterbok/fonts/icon/font/icon.woff") format("woff"), url("../../../wp-content/themes/thepeterbok/fonts/icon/font/icon.ttf") format("truetype"), url("../../../wp-content/themes/thepeterbok/fonts/icon/font/icon.svg#icon") format("svg"); }
