--- a/sass/header.sass
+++ b/sass/header.sass
@@ -7,6 +7,8 @@
 body
 	position: relative
 	min-width: 320px
+	min-height: 100vh
+	padding-bottom: 174px
 	font-size: 18px
 	line-height: 1.6
 	font-family: "RobotoMedium", sans-serif
@@ -17,6 +19,9 @@ a
 	+hover-effect(#333,none)
 img
 	max-width: 100%
+
+.post__img
+	max-width: 380px
 
 h1,h2,h3,h4,
 .h1,.h2,.h3,.h4
@@ -59,6 +64,7 @@ h1,.h1
 		margin: 0 2px
 		z-index: 5
 		@extend %main-transition
+		&_active,
 		&:hover
 			.main-nav__link
 				color: #fff
@@ -161,6 +167,7 @@ h1,.h1
 		&_back
 			transform: translate3d(0, 0, -220px) rotate3d(1, 0, 0, 90deg)
 			background-image: url(../img/author.jpg)
+			background-size: contain
 			opacity: 0
 
 .brand-logo__info
